# OP-2uzd-

./: .gitignore  CMakeLists.txt  Makefile  README.md  config-file
Include/: Classes.hpp  GenerateRecords.hpp  InputOutput.hpp  SortStrats.hpp  Timer.hpp
Source/: Classes.cpp  GenerateRecords.cpp  Main.cpp  Timer.cpp
docs/html/: _classes_8cpp.html  _classes_8hpp.html  _classes_8hpp_source.html  _generate_records_8cpp.html  _generate_records_8hpp.html  _generate_records_8hpp_source.html  _input_output_8hpp.html  _input_output_8hpp_source.html  _main_8cpp.html  _r_e_a_d_m_e_8md.html  _sort_strats_8hpp.html  _sort_strats_8hpp_source.html  _timer_8cpp.html  _timer_8hpp.html  _timer_8hpp_source.html  annotated.html  class_person-members.html  class_person.html  class_rand_int-members.html  class_rand_int.html  class_student-members.html  class_student.html  class_timer-members.html  class_timer.html  classes.html  dir_0f94bfb387a9e83b69b1a288247c9aa8.html  dir_311eb43381e9734c0a949ab672f93eca.html  dir_c8297bb4e9fb81094164e2a90154efc3.html  dir_f6a1c890d2bc0a6503690d3f17eb3d19.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  globals_vars.html  hierarchy.html  index.html  md_README.html  md__test_holder__r_e_a_d_m_e.html  (+1 more)
docs/latex/: _classes_8cpp.tex  _classes_8hpp.tex  _generate_records_8cpp.tex  _generate_records_8hpp.tex  _input_output_8hpp.tex  _main_8cpp.tex  _r_e_a_d_m_e_8md.tex  _sort_strats_8hpp.tex  _timer_8cpp.tex  _timer_8hpp.tex  annotated.tex  class_person.tex  (+12 more)
test/: CMakeLists.txt  Tests.cpp
(+35 files in other folders)
